# pyeigen

./: .clang-format  .gitignore  README.md  meson.build  pyproject.toml
pyeigen/: __init__.py  matrix.cpp  matrix.h  matrix.pyi  meson.build
tests/: test.py  test_basic.py  test_pyeigen.py
